--- a/blog.html
+++ b/blog.html
@@ -18,76 +18,7 @@
   <body>
     <div id="app">
       <!-- ========== Start Header ========== -->
-      <header class="header">
-        <nav class="navbar bg-primary fixed-top">
-          <div class="container">
-            <a class="navbar-brand" href="../"
-              ><img src="../public/logo.png" class="header__logo" alt="logo"
-            /></a>
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="offcanvas"
-              data-bs-target="#offcanvasDarkNavbar"
-              aria-controls="offcanvasDarkNavbar"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div
-              class="offcanvas bg-primary offcanvas-end text-bg-dark"
-              tabindex="-1"
-              id="offcanvasDarkNavbar"
-              aria-labelledby="offcanvasDarkNavbarLabel"
-            >
-              <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">
-                  <img
-                    src="../public/logo.png"
-                    class="header__logo"
-                    alt="logo"
-                  />
-                </h5>
-                <button
-                  type="button"
-                  class="btn-close btn-close-white"
-                  data-bs-dismiss="offcanvas"
-                  aria-label="Close"
-                ></button>
-              </div>
-              <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                  <li class="nav-item">
-                    <a
-                      class="nav-link active"
-                      aria-current="page"
-                      href="./pages/about.html"
-                      >About</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="./pages/newsletter.html"
-                      >Newsletter</a
-                    >
-                  </li>
-                </ul>
-                <form class="d-flex mt-3" role="search">
-                  <input
-                    class="form-control me-2"
-                    type="search"
-                    placeholder="Search"
-                    aria-label="Search"
-                  />
-                  <button class="btn btn-success" type="submit">Search</button>
-                </form>
-              </div>
-            </div>
-          </div>
-        </nav>
-      </header>
-
+      <header class="header"></header>
       <!-- ========== End Header ========== -->
 
       <!-- ========== Start Main ========== -->
@@ -321,37 +252,10 @@
 
       <!-- ========== End Main ========== -->
 
-      <footer class="footer">
-        <div class="container">
-          <div
-            class="footer__container d-md-flex pt-3 pt-md-0 justify-content-between align-items-center"
-          >
-            <div class="footer__copyright text-center text-md-start">
-              © Copyright 2022 by Thao’s blog. Built with
-              <span>&#128151;</span> by CreativeDesignsGuru
-            </div>
-            <div
-              class="footer__socials d-flex gap-3 justify-content-center mt-2 mt-md-0"
-            >
-              <div class="icon">
-                <i class="fa fa-github" aria-hidden="true"></i>
-              </div>
-              <div class="icon">
-                <i class="fa fa-facebook" aria-hidden="true"></i>
-              </div>
-              <div class="icon">
-                <i class="fa fa-twitter" aria-hidden="true"></i>
-              </div>
-              <div class="icon">
-                <i class="fa fa-linkedin" aria-hidden="true"></i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </footer>
+      <footer class="footer"></footer>
     </div>
     <script src="../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <!-- <script src="./assets/js/app.js"></script> -->
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
