--- a/blog-detail.html
+++ b/blog-detail.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog detail</title>
+    <title>Blog detail | Personal Website</title>
     <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon" />
 
     <link
