--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Personal Website</title>
+    <title>Home | Personal Website</title>
     <link rel="shortcut icon" href="./public/favicon.png" type="image/x-icon" />
     <link
       rel="stylesheet"
