--- a/about.html
+++ b/about.html
@@ -31,11 +31,90 @@
               About <span class="text-primary">my self</span>
             </h1>
 
+            <div class="about__top">
+              <div class="avatar">
+                <img src="./images/avatar.png" alt="Avatar" />
+              </div>
+              <p class="name text-primary">Nguyen Van Thao</p>
+              <p class="text-muted">PHP Developer</p>
+
+              <div
+                class="socials d-flex gap-3 justify-content-center my-3 my-md-5"
+              >
+                <div class="icon">
+                  <a href="https://twitter.com/" rel="noopener" target="_blank">
+                    <img src="./images/icon/twitter.png" alt="" />
+                  </a>
+                </div>
+
+                <div class="icon">
+                  <a
+                    rel="noopener"
+                    href="https://www.facebook.com/thaotoiday"
+                    target="_blank"
+                  >
+                    <img src="./images/icon/facebook.png" alt="" />
+                  </a>
+                </div>
+
+                <div class="icon">
+                  <a
+                    href="https://www.linkedin.com/"
+                    rel="noopener"
+                    target="_blank"
+                  >
+                    <img src="./images/icon/linkedin.png" alt="" />
+                  </a>
+                </div>
+
+                <div class="icon">
+                  <a
+                    href="https://www.youtube.com/"
+                    rel="noopener"
+                    target="_blank"
+                  >
+                    <img src="./images/icon/youtube.png" alt="" />
+                  </a>
+                </div>
+              </div>
+
+              <a
+                href="./upload/cv.pdf"
+                class="button button-secondary text-uppercase"
+                download="cv"
+              >
+                DOWNLOAD CV
+              </a>
+            </div>
             <div class="about__content">
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                Phasellus malesuada nisi tellus, non imperdiet nisi tempor at.
-              </p>
+              <h3><span class="text-primary">#</span> About me</h3>
+              <br />
+              <ul>
+                <li>BirthYear - 2003</li>
+                <li>Location - Ho Chi Minh, Viet Nam</li>
+                <li>Email - thaolaptrinh@gmail.com</li>
+                <li>Phone - +84 034 005 746</li>
+                <li>Education - FPT Polytechnic</li>
+                <li>Major - Web Developer</li>
+              </ul>
+              <br />
+              <h3><span class="text-primary">#</span> Languages</h3>
+              <br />
+              <ul>
+                <li>Vietnamese</li>
+                <li>English (Medium)</li>
+              </ul>
+
+              <br />
+              <h3><span class="text-primary">#</span> Skills</h3>
+              <br />
+              <ul>
+                <li>HTML, CSS (Sass, TailwindCss), JavaScript (VueJS)</li>
+                <li>PHP (Laravel)</li>
+                <li>RESTful API</li>
+                <li>MySQL, PostgreSQL</li>
+                <li>Git, Github</li>
+              </ul>
             </div>
           </div>
         </section>
