--- a/blog-detail.html
+++ b/blog-detail.html
@@ -35,7 +35,7 @@
             </p>
 
             <div class="post__img">
-              <img src="../images/post/bg-1.png" alt="Post image" />
+              <img src="./images/post/bg-1.png" alt="Post image" />
             </div>
             <div class="post__content mt-4 mt-md-5">
               <h3>Lorem ipsum dolor</h3>
