--- a/blog.html
+++ b/blog.html
@@ -43,7 +43,7 @@
                       <a href="./blog-detail.html">
                         <img
                           class="card-img-top"
-                          src="../images/post/1.png"
+                          src="./images/post/1.png"
                           alt="Title"
                         />
                       </a>
@@ -71,7 +71,7 @@
                       <a href="./blog-detail.html">
                         <img
                           class="card-img-top"
-                          src="../images/post/2.png"
+                          src="./images/post/2.png"
                           alt="Title"
                         />
                       </a>
@@ -99,7 +99,7 @@
                       <a href="./blog-detail.html">
                         <img
                           class="card-img-top"
-                          src="../images/post/3.png"
+                          src="./images/post/3.png"
                           alt="Title"
                         />
                       </a>
@@ -128,7 +128,7 @@
                       <a href="./blog-detail.html">
                         <img
                           class="card-img-top"
-                          src="../images/post/4.png"
+                          src="./images/post/4.png"
                           alt="Title"
                         />
                       </a>
@@ -157,7 +157,7 @@
                       <a href="./blog-detail.html">
                         <img
                           class="card-img-top"
-                          src="../images/post/5.png"
+                          src="./images/post/5.png"
                           alt="Title"
                         />
                       </a>
@@ -186,7 +186,7 @@
                       <a href="./blog-detail.html">
                         <img
                           class="card-img-top"
-                          src="../images/post/6.png"
+                          src="./images/post/6.png"
                           alt="Title"
                         />
                       </a>
